@@ -128,6 +128,7 @@ void jswrap_ble_setWhitelist(bool whitelist);
 void jswrap_ble_setConnectionInterval(JsVar *interval);
 void jswrap_ble_setSecurity(JsVar *options);
 JsVar *jswrap_ble_getSecurityStatus(JsVar *parent);
+JsVar *jswrap_ble_startBonding(bool forceRepair);
 
 JsVar *jswrap_BluetoothDevice_gatt(JsVar *parent);
 void jswrap_ble_BluetoothDevice_sendPasskey(JsVar *parent, JsVar *passkeyVar);
